# popping

./: .env.example  .gitignore  README.md  docker-compose.override.yml.example  docker-compose.yml
.github/workflows/: build.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_auth.py  0003_scoring.py  0004_tz_aware.py  0005_brief_meta.py  0006_assets.py  0007_app_settings.py  0008_entries_fetched_at_index.py  0009_feed_onboarding.py  0010_custom_headers.py  0011_entry_cached_summary.py  0012_indexes.py  0013_notification_dedup.py  0014_entries_meta_reddit_thread_url_index.py  0015_user_preferences.py  0016_podcast_transcript_summary.py  0017_feed_recommendation_candidates.py  0018_story_clusters.py  0019_leisure_feed_recommendations.py  0020_reddit_comment_summary.py
backend/app/: __init__.py  apple_podcasts.py  article_extract.py  article_summary.py  assets.py  brief.py  brief_filter.py  config.py  db.py  deps.py  embeddings.py  feed_autodiscovery.py  feed_discovery.py  feed_recommendations.py  framing.py  main.py  models.py  notify.py  podcast_asr.py  podcast_transcript.py  reddit_client.py  reddit_comment_summary.py  redis.py  request_state.py  runtime_settings.py  scheduler.py  schemas.py  url_safety.py  youtube.py
backend/app/auth/: __init__.py  deps.py  local.py  oidc.py  routes.py  session.py  settings.py
backend/app/llm/: __init__.py  anthropic.py  base.py  groq.py  ollama.py  ollama_cloud.py  openai.py  tags.py
backend/app/routes/: brief.py  entries.py  foryou.py  framing.py  health.py  ingest.py  interactions.py  preferences.py  settings.py  sources.py
backend/app/scoring/: __init__.py  composite.py  convergence.py  engagement.py  personal.py  recency.py  source.py
backend/app/sources/: __init__.py  base.py  cisa_kev.py  dynamic_reddit.py  dynamic_rss.py  generic_scrape.py  github_releases.py  hn.py  nvd.py  podcast.py  reddit.py  rfd.py  rss.py  wikipedia_on_this_day.py  youtube.py
backend/scripts/: reddit_reachability.py
backend/tests/: conftest.py  factories.py  test_apple_podcasts.py  test_article_summary.py  test_convergence.py  test_entries_per_category.py  test_entry_related.py  test_feed_autodiscovery.py  test_feed_discovery.py  test_feed_recommendations.py  test_framing.py  test_generic_scrape.py  test_html_entity_unescape.py  test_image_extraction.py  test_og_image.py  test_podcast.py  test_podcast_asr.py  test_podcast_transcript.py  test_preferences_anonymous.py  test_reddit_comment_summary.py  test_rescore.py  test_rfd_engagement.py  test_scheduler_backoff.py  test_settings.py  test_source_vote_scores.py  test_youtube.py
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/scripts/: check-html-comments.mjs
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
frontend/src/components/: AuthChip.tsx  BriefCard.tsx  Card.tsx  Column.tsx  Drawer.tsx  FeedManager.tsx  ForYou.tsx  FramingWatch.tsx  Hamburger.tsx  LoginPage.tsx  SearchResults.tsx  Settings.tsx  ShortcutsSheet.tsx  Skeleton.tsx  SourceIcon.tsx  Toast.tsx  UserBadge.tsx  Wallpaper.tsx
frontend/src/lib/: interactions.ts  preferences.tsx  storage.ts
