[project]
name = "popping"
version = "0.1.0"
description = "Personal AI-ranked intelligence dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "redis>=5.0",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "feedparser>=6.0",
    # OIDC (optional; only loaded when OIDC_ENABLED=true)
    "authlib>=1.3",
    "itsdangerous>=2.2",
    # Local fallback user (optional; only loaded when LOCAL_AUTH_ENABLED=true)
    "bcrypt>=4.1",
    # Phase 2 — embeddings + LLM provider abstraction
    "sentence-transformers>=2.7",
    "numpy>=1.26",
    # Phase 4 — notifications (preferred backend; Pushover uses httpx
    # directly, no extra dep needed)
    "apprise>=1.8",
    # Article full-text extraction for LLM summarization (see
    # app/article_extract.py) — readability-style "strip nav/ads/
    # related-links, keep the article body" extraction from raw
    # HTML. The rest of the codebase deliberately avoids HTML-
    # parsing dependencies (see app/assets.py's og:image regex
    # comment), but that convention covers narrow, well-defined
    # patterns (a single meta tag); genuine article-body extraction
    # across arbitrary site layouts is not something a regex can do
    # reliably, so this is a deliberate, scoped exception.
    "trafilatura>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# The app's SQLAlchemy engine (``app.db.engine``) is a module-level
# singleton, same as it is in the running app under uvicorn — exactly
# one event loop for its whole lifetime. Pytest-asyncio's default is a
# fresh loop per test function, which orphans the engine's pooled
# asyncpg connections (opened under a previous test's loop) and raises
# "Future attached to a different loop". Session-scoped loops for both
# fixtures and tests keep the engine and every test on the same loop.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"